# pedal-keeb-control

./: Cargo.toml  README.md  build.rs
proto/: keymapp.proto
src/: config.rs  keymapp_client.rs  main.rs  pedal.rs
