[package]

name = "pedal-keeb-control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
rusb = "0.9.4"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
log = "0.4.28"
tower = "0.5.2"
hyper-util = { version = "0.1.17", features = ["tokio"] }
[build-dependencies]
tonic-prost-build = "0.14.2"
